# ar-audioengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: agm_mixer.cpp  cli.cpp  default_render.cpp  hw_mixer.cpp  main.cpp  pcm_utils.cpp
dependencies/: CMakeLists.txt  check_dependencies_inclusion.cmake
include/: agm_mixer.h  audioreach_mappings.h  cli.h  hw_mixer.h  pcm_utils.h  render.h
libraries/: CMakeLists.txt
libraries/OrtModel/: OrtModel.cpp  OrtModel.h
libraries/QNN/: DlcModel.cpp  DlcModel.h  QnnModel.cpp  QnnModel.h  README.md  TensorTools.cpp  TensorTools.h
libraries/QnnModel/: QnnModel.h  README.md
projects/AutoGuitarAmp_Test/: render.cpp
projects/AutoGuitarAmp_Timing/: render.cpp
projects/NAM/: render.cpp
projects/NAM_Timing/: render.cpp
projects/NeuralOsc_Test/: render.cpp
projects/NeuralOsc_Timing/: render.cpp
projects/Onnx_Brave/: render.cpp
projects/Onnx_Brave_Timing/: render.cpp
projects/Onnx_Peavy/: render.cpp
projects/Onnx_Peavy_Timing/: render.cpp
projects/Onnx_Test/: render.cpp
projects/nam/: MonoFilePlayer.cpp  render.cpp
projects/onnx_brave/: render.cpp
projects/passthrough/: render.cpp
projects/qnn_osc/: render.cpp
projects/qnn_sample_project/: render.cpp
projects/qnn_sample_project/run/: full_oscillator_256x2.dlc  full_oscillator_512x2.dlc
projects/qnn_sine/: render.cpp
projects/rtneural_osc/: 1i-512-relu_p=0.5_r=0.5.json  render.cpp
projects/sample_player/: MonoFilePlayer.cpp  render.cpp
projects/sine/: render.cpp
